--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
 
     apt 'com.jakewharton:butterknife-compiler:8.1.0'
 
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
