--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.2.0'
     compile 'com.google.firebase:firebase-ads:9.2.0'
 
+    compile 'com.yandex.android:mobmetricalib:2.42'
+
     compile 'org.greenrobot:eventbus:3.0.0'
 
     compile 'com.google.code.gson:gson:2.4'
