--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,31 @@
         <activity
             android:name=".MainWindow"
             android:launchMode="singleTop" />
-        <activity android:name=".SplashActivity"
-            android:theme="@style/AppTheme.BrandedLaunch"
-            android:noHistory="true">
+        <activity
+            android:name=".SplashActivity"
+            android:noHistory="true"
+            android:theme="@style/AppTheme.BrandedLaunch">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".info.AboutProgram"
+            android:parentActivityName=".MainWindow"
+            android:windowSoftInputMode="stateHidden|adjustResize">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainWindow" />
+        </activity>
+        <activity
+            android:name=".info.FeedBack"
+            android:parentActivityName=".MainWindow"
+            android:windowSoftInputMode="adjustPan|adjustResize">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainWindow" />
         </activity>
     </application>
 
