added ability watching interview questions on NonGoogleAPI devices

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainWindow" />
         </activity>
+        <activity android:name=".NonGoogleApiActivity"></activity>
     </application>
 
 </manifest>
