--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.1.0'
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
     apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    compile'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
